merged with current devel code